fixing viewport units on mobile devices

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -47,7 +47,8 @@ $color-border: #90756A;
     size: 14px;
   }
   height: 100vh;
-  min-width: 300px;
+  min-width: 320px;
+  max-width: 1600px;
 }
 
   .header {
@@ -64,7 +65,7 @@ $color-border: #90756A;
   .players-section {
     @include flex-row-centered();
     height: 60%;
-    width: 80%;
+    width: 100%;
   }
   
     .player-1-section, 
@@ -181,7 +182,7 @@ $color-border: #90756A;
           justify-content: center;
       padding: 3vh 3vw;
       position: relative;
-      width: 80%;
+      width: 100%;
     }
     
       .footer-buttons__start-over, 
@@ -247,7 +248,7 @@ $color-border: #90756A;
 
 ////////////////////////////// for mobile phones //////////////////////////////
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 320px) and (max-width: 680px) {
   
   .header {
     font-size: 1rem;
@@ -312,7 +313,7 @@ $color-border: #90756A;
 
 ////////////////////////////// for tablets //////////////////////////////
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 680px) and (max-width: 1024px) {
   
   .header {
     font-size: 1.25rem;
@@ -378,7 +379,7 @@ $color-border: #90756A;
 
 ////////////////////////////// for desktop //////////////////////////////
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1024px) and (max-width: 1600px) {
   
   .header {
     font-size: 1.5rem;
@@ -497,6 +498,7 @@ $color-border: #90756A;
 @media(hover: none) and (pointer: coarse) {
 
   .main {
+    height: 100vh;
     height: calc(var($mobileVH, 1vh) * 100);
   }
 
